--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -14,7 +14,6 @@
 .main-container .media-info .media-right .media-tool-bar .btn-rating:hover
 .short-review-masker .short-review-content
 .main-container .pay-bar .vip .btn-pay
-.bilibili-player-video-bottom-area .bilibili-player-video-sendbar .bilibili-player-video-inputbar
 .members-info__header
 .bilibili-player .bilibili-player-area .bilibili-player-video-panel
 .coin-dialog-mask .coin-operated
@@ -37,11 +36,14 @@
 .main-container .media-info .media-right .pub-wrapper .up-info-wrapper .split-line
 .bui-switch .bui-body
 .bui-slider .bui-track.bui-track-video-progress .bui-bar-wrap .bui-bar-buffer
+.bilibili-player-video-bottom-area:before
 	background-color var(--c-border) !important
 
 .bilibili-player em
 .bilibili-player.mode-webfullscreen .bilibili-player-video-control-wrap .bilibili-player-video-control-bottom-center .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-danmaku-input
 .comment-m .comment
+.player-module #bofqi.stardust-player
+.bilibili-player-video-bottom-area .bilibili-player-video-sendbar .bilibili-player-video-inputbar
 	background-color transparent !important
 
 .bui-slider .bui-track .bui-bar-wrap .bui-bar
