--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -1,5 +1,6 @@
 /* 内容主体 */
 .gg-window
+.bypb-window
 .live-tabs
 .pgc-rank .pgc-rank-wrap
 .rank-list .rank-wrap
@@ -44,6 +45,10 @@
 .first-screen
 	margin-top 40px
 
+#bili_anime .time-line .zone-list-box
+#bili_guochuang .time-line .zone-list-box
+	padding 10px
+
 .space-between
 	position relative
 	justify-content center
@@ -56,6 +61,9 @@
 .extension
 .manga-panel
 	width 100%
+
+.focus-carousel
+	margin-right 10px
 
 .extension .ext-box
 	border-radius 4px
@@ -89,6 +97,19 @@
 #bili_report_spe_rec .zone-list-box
 	height auto !important
 
+@media screen and (max-width: 1870px)
+	#bili_report_spe_rec .zone-list-box .video-card-common:nth-child(n+6)
+		display none
+
+	.video-card-common
+	.live-card
+	.manga-panel .manga-list-box .manga-card
+		flex 18% !important
+
+	.b-footer-wrap .extension
+	.b-wrap .extension
+		width 100%
+
 @media screen and (max-width: 1654px)
 	.b-footer-wrap .zone-list-box
 	.b-wrap .zone-list-box
@@ -105,6 +126,10 @@
 	.b-footer-wrap .extension .video-card-common:nth-child(n+5)
 	.b-wrap .extension .video-card-common:nth-child(n+5)
 		display block
+
+	.b-footer-wrap .extension .video-card-common:nth-child(n+6)
+	.b-wrap .extension .video-card-common:nth-child(n+6)
+		display none
 
 	.video-card-common .card-pic
 		height 124px !important
@@ -171,7 +196,7 @@
 .video-card-common
 .live-card
 .manga-panel .manga-list-box .manga-card
-	flex 18%
+	flex 14%
 	margin 1%
 
 .video-card-common .card-pic
@@ -246,11 +271,11 @@
 /* 排行榜图标 */
 .pgc-rank
 .rank-list
-.manga-rank
+.b-wrap .manga-rank
 	position absolute
 	top 0
 	right 70px
-	width auto
+	width auto !important
 
 	.rank-header
 		.name
