--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -41,6 +41,7 @@
 .silver-seed-store .content
 .draw-full-cntr
 #webShare .bili-share-pc
+.bili-share-pc .share-weixin-qr
 	background-color var(--c-background) !important
 
 .attention-btn-ctnr .right-part
@@ -50,6 +51,9 @@
 .sub-tab-box .item.active
 .draw-full-cntr .function-bar
 	background-color var(--c-hover) !important
+
+.bili-share-pc .weixin-hover .qr-before
+	background-color: transparent !important
 
 .draw-full-cntr .function-bar.draw
 .tab-candidate>span:after
@@ -125,6 +129,7 @@
 	left 50%
 
 .link-navbar-ctnr
+.bili-share-pc .weixin-hover .qr-before
 	box-shadow none
 
 .link-navbar .main-ctnr .nav-logo
@@ -205,6 +210,10 @@
 	border-color var(--c-accent) !important
 	background-color var(--c-background) !important
 	color var(--c-accent) !important
+
+.box-body
+	border-radius 4px !important
+	background-color var(--c-background) !important
 
 @media (prefers-color-scheme: dark)
 	.live-player-ctnr.minimal
