--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -108,6 +108,7 @@ button
 .vote-btn-box .vote-btn
 .bcc-pagination-item.selected
 .qa-area-ol-wrp .qa-area-ol-btn
+.btn-default
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
