--- a/bilibili-lite/src/public/index.styl
+++ b/bilibili-lite/src/public/index.styl
@@ -26,10 +26,5 @@ url-prefix("https://www.bilibili.com/ranking/") {
   /* 与主页相同的 banner */
   @import 'bannerHeader'
 }
-@-moz-document regexp("^.*/pages/nav/index.*")
-  /* 去除导航嵌套的 iframe 背景图 */
-  html
-    background-image none
-
-  body
-    background-color transparent
+/* 嵌套 iframe */
+@import 'iframe'
