--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -52,12 +52,14 @@
 .hot-recom-wrapper .hot-trailer .player-list .list-item-wrap .list-item:hover
 .popup-card .preview
 .rank-wrap .head-section .more span:hover
+.charge-success-content>.charge-success-message
 	background-color var(--c-hover) !important
 
 .split-line
 	background-color var(--c-border) !important
 
 .spread-module .num
+.charge-success-content>.charge-success-message textarea
 	background-color transparent !important
 
 .primary-menu .nav-menu .channel.on:after
@@ -100,6 +102,8 @@
 .filter-block .filter-item-wrapper .filter-item:hover
 .sub-nav-m ul li a:hover
 .cinema-home-crumb ul li.on a
+.charge-success-content>p span
+.charge-success-content>p i
 	color var(--c-accent) !important
 
 .primary-menu.border-b
@@ -110,6 +114,7 @@
 .hot-recom-wrapper .hot-trailer .player-list .list-item-wrap .list-item .list-cover
 .rank-wrap .head-section .more span
 .chief-thumb-item
+.charge-success-content>.charge-success-message
 	border-color var(--c-border) !important
 
 .battery-item.active .battery-bg
