--- a/bilibili-lite/src/live/header.styl
+++ b/bilibili-lite/src/live/header.styl
@@ -37,6 +37,8 @@
 .shortcuts-ctnr .shortcut-item:hover .list-item span
 .nav-ctnr .link-navbar .shortcuts-ctnr .shortcut-item:hover .list-item span
 .live-room-app .link-navbar .shortcuts-ctnr .shortcut-item:hover .list-item span
+.user-item:hover .username
+.activity-item-ctnr:hover .username
   color var(--c-accent) !important
 
 .info-item-ctnr
