--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -37,7 +37,6 @@
 .international-header .mini-type
 .van-popover .mini-type
 	border-bottom 1px solid var(--c-border)
-	background-color var(--c-background)
 
 /* 左侧 */
 .nav-link
@@ -104,6 +103,7 @@
 .publish-panel
 .popover-channe
 .user-panel-ctnr .user-panel .lens-ctnr
+.nav-item.message .i-frame
 	border 1px solid var(--c-border) !important
 	border-top-width 0 !important
 
@@ -185,6 +185,7 @@
 	border 1px solid var(--c-border)
 
 /* 消息弹窗 */
+.i-frame
 .i-frame iframe
 .i-frame::before
 .im-list-box
