--- a/bilibili-lite/src/search/base.styl
+++ b/bilibili-lite/src/search/base.styl
@@ -4,7 +4,6 @@
 .home-wrap .home-suggest .title .title-icon
   display none
 
-.page-wrap .pager
 .search-wrap .search-block .input-wrap
 .error-wrap
 .home-wrap .home-input .type
@@ -18,6 +17,9 @@
 .home-wrap .home-input .type:hover
 .suggest-wrap .horizontal .hz-text:hover
   background-color var(--c-hover)
+
+.page-wrap .pager
+  background-color transparent
 
 #navigator .v-switcher-header-anchor
 .home-wrap .home-suggest .hot-search .item .num.special
@@ -77,6 +79,12 @@
 .home-wrap .home-suggest .title
   margin 0
 
+.contain .body-contain
+  padding 10px
+
+.contain
+  width 1000px
+
 .home-wrap .home-suggest
 .home-wrap .home-input .type.selected
 .home-wrap .home-input .type:hover
@@ -91,6 +99,12 @@ em.keyword
 .live-user-item
   border 1px solid var(--c-border)
   box-shadow none
+
+.home-wrap .home-suggest .hot-search
+.home-wrap .home-suggest .history
+.contain .body-contain
+  border-radius 4px
+  background-color var(--c-background)
 
 /* 清除重复按钮样式 */
 .home-wrap .home-input .type .default
