--- a/bilibili-lite/src/v/index.styl
+++ b/bilibili-lite/src/v/index.styl
@@ -24,3 +24,7 @@ url-prefix("https://www.bilibili.com/list/") {
 @-moz-document url-prefix("https://www.bilibili.com/blackboard/") {
 	@import 'blackboard'
 }
+@-moz-document url-prefix("https://www.bilibili.com/anime/timeline/"),
+url-prefix("https://www.bilibili.com/guochuang/timeline/") {
+	@import 'timeline'
+}
