--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -155,6 +155,9 @@ ul.star-wrapper li i.icon-star-full
 .video-page-operator-card .info .count.up
 	width auto
 
+#bofqi
+	height 100vh
+
 .bilibili-player-ending-panel
 	backdrop-filter blur(5px)
 
