--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -64,6 +64,7 @@
 
 .primary-menu .nav-menu .channel.on:after
 .timeline-box .timeline-item.new p.num a
+.bangumi-item .cover-wrapper .corner-tag.badge_2
 	background-color var(--c-accent) !important
 
 .video-item-biref .biref-info .biref-title
@@ -73,6 +74,7 @@
 .subtitle-new
 .hot-recom-wrapper .hot-trailer .player-list .list-count
 .hot-recom-wrapper .hot-title
+.filter-wrapper .filter-title
 	color var(--c-title) !important
 
 .bangumi-home-crumb .fcname ul.n_num li a
@@ -85,6 +87,7 @@
 .popup-card .info .style
 .popup-card .info .up-time
 .popup-card .info .desc
+.bangumi-index-crumb ul li a
 	color var(--c-text) !important
 
 .carousel-module .panel .title a
@@ -104,6 +107,10 @@
 .cinema-home-crumb ul li.on a
 .charge-success-content>p span
 .charge-success-content>p i
+.bangumi-index-crumb ul li.on a
+.bangumi-index-crumb ul li:hover a
+.sort-item.on span
+.filter-block .filter-item-wrapper .filter-item.on
 	color var(--c-accent) !important
 
 .primary-menu.border-b
@@ -139,6 +146,9 @@
 
 .block-area:last-child
 	margin 0
+
+.filter-body .pagelistbox
+	margin 20px 0
 
 .charge-header-bg
 	background-image none !important
@@ -270,6 +280,14 @@
 .card-video-wrapper .card-video-content .huge-recom+.card-video-list
 .video-list-recom .video-list-video
 	margin-left 0
+
+.bangumi-index-wrapper .bangumi-index-body .filter-body .bangumi-list
+	padding 10px 0
+	border-radius 4px
+	background-color var(--c-background)
+
+.bangumi-index-wrapper .bangumi-index-body .filter-body .bangumi-list .bangumi-item
+	margin 0 10px
 
 .spread-module .t
 	white-space nowrap
