--- a/bilibili-lite/src/v/list.styl
+++ b/bilibili-lite/src/v/list.styl
@@ -41,7 +41,7 @@
   line-height initial
 
 .container-body .zr_recomd ul
-  padding 20px 20px
+  padding 10px
   border-radius 4px
   background-color var(--c-background) !important
 
@@ -65,7 +65,7 @@
   color var(--c-accent)
 
 .vd-list-cnt
-  padding 0 20px
+  padding 0 10px
   border-radius 4px
   background-color var(--c-background) !important
 
