--- a/bilibili-lite/src/space/home.styl
+++ b/bilibili-lite/src/space/home.styl
@@ -28,6 +28,7 @@
 #page-fav .fav-main .filter-item.search
 .be-tab-cursor:after
 #page-index .col-2 .section .auth-detail
+.follow-dialog-wrap .follow-dialog-window .layout
   display none
 
 #pin-wrapper .pin-layer-header .pin-layer-header-text
@@ -37,6 +38,8 @@
 .n .n-data .n-data-k
 .n .n-data .n-data-v
 #page-index .col-1 .section.empty:after
+.follow-dialog-wrap .follow-dialog-window .content .group-list .add-group .add-btn
+.follow-dialog-wrap .follow-dialog-window .content .group-list .empty-tip
   color var(--c-text) !important
 
 .be-tab-item.is-active span
@@ -76,6 +79,7 @@
 #pin-wrapper #pin-layer
 .modal-wrapper
 .fans-action-follow
+.follow-dialog-wrap .follow-dialog-window
   background-color var(--c-background)
 
 #pin-wrapper .pin-layer-vlist .small-item:hover
@@ -96,6 +100,9 @@ input[type=text]:focus
 .article-content
 .s-content
 .fans-action-btn.follow
+.follow-dialog-wrap .follow-dialog-window .title
+.follow-dialog-wrap .follow-dialog-window .content .group-list .add-group .add-btn
+.follow-dialog-wrap .follow-dialog-window .bottom
   border-color var(--c-border)
 
 .be-tab-cursor
@@ -117,8 +124,8 @@ input[type=text]:focus
 .be-tags-container .tag.new-tag
 .be-tags-container .tag.coop-tag
 .be-tags-container .tag.inter-tag
-  background-color var(--c-accent)
-  color var(--c-white)
+  background-color var(--c-accent) !important
+  color var(--c-white) !important
 
 .h .h-fans-icon .fans-hover-tip
 .h .h-fans-icon .fans-hover-tip:after
