--- a/bilibili-lite/src/live/header.styl
+++ b/bilibili-lite/src/live/header.styl
@@ -10,6 +10,7 @@
 .link-panel-ctnr .load-more:hover
 .calendar-checkin .checkin-btn:hover
 .area-list-panel .list-item:hover
+.user-level-detail .detail-link:hover
   background-color var(--c-hover) !important
 
 .link-navbar-ctnr
@@ -38,7 +39,7 @@
 .nav-ctnr .link-navbar .shortcuts-ctnr .shortcut-item:hover .list-item span
 .live-room-app .link-navbar .shortcuts-ctnr .shortcut-item:hover .list-item span
 .user-item:hover .username
-.activity-item-ctnr:hover .username
+.activity-item-ctnr:hover .info-ctnr .first-line .username
   color var(--c-accent) !important
 
 .info-item-ctnr
