--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -109,6 +109,7 @@ button
 .bcc-pagination-item.selected
 .qa-area-ol-wrp .qa-area-ol-btn
 .btn-default
+.h .h-follow
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -228,6 +229,7 @@ button
 .watch-later-list header .d-btn
 .cinema-movie-wrapper .slider-contro span
 .bcc-pagination-item
+.h .h-message
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
