--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -97,6 +97,9 @@ ul.star-wrapper li i
 .main-container .media-info .media-right .media-count
 	color var(--c-text) !important
 
+.bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .display>div.active
+	color: var(--c-white) !important
+
 .coin-operated-m .coin-title span
 .coin-operated-m .mc-box.on .c-num
 .main-container .review-module .review-list .review-item .review-header .review-star li i.icon-star-full
@@ -105,6 +108,7 @@ ul.star-wrapper li i.icon-star-full
 .video-info .video-data .argue i
 .video-info .video-data .copyright i
 .up-info .u-info .name .username.is-vip:hover
+.members-info .up-card .info .info-name.is-vip:hover
 .ep-list-wrapper .ep-item i
 .section-ep-wrapper .ep-item i
 .main-container .tool-bar .coin-info.active i
